--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -4,6 +4,8 @@ plugins {
 }
 
 loom {
+    accessWidenerPath = project(":common").loom.accessWidenerPath
+
     forge {
         mixinConfig "architectury.mixins.json"
 
