--- a/testmod-fabric/build.gradle
+++ b/testmod-fabric/build.gradle
@@ -4,6 +4,8 @@ plugins {
 }
 
 loom {
+    accessWidenerPath = project(":common").loom.accessWidenerPath
+
     mixin { useLegacyMixinAp = true }
 }
 
