--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -22,6 +22,7 @@ configurations {
 
 repositories {
     maven { url "https://maven.terraformersmc.com/releases/" }
+    mavenLocal() // TODO remove
 }
 
 dependencies {
