--- a/testmod-fabric/build.gradle
+++ b/testmod-fabric/build.gradle
@@ -21,6 +21,10 @@ configurations {
     developmentFabric.extendsFrom common
 }
 
+repositories {
+    mavenLocal() // TODO remove
+}
+
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
