--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,7 @@ base_version=5.1
 maven_group=dev.architectury
 
 fabric_loader_version=0.13.3
-fabric_api_version=0.49.1+local-fix-screen-crash
-# TODO change above
+fabric_api_version=0.49.2+1.19
 mod_menu_version=3.1.0
 
 forge_version=40.0.1
