--- a/.github/workflows/1.19_push.yml
+++ b/.github/workflows/1.19_push.yml
@@ -1,27 +1,26 @@
-name: Build PR snapshot (1.18)
+name: Build and Release (1.18)
 
 on:
-  pull_request:
+  push:
     paths:
       - '**.gradle'
       - '**.properties'
       - '**/src/**'
     branches:
-      - "1.18.2"
-    types: [ opened, synchronize, reopened ]
-jobs:
-  validate-gradle:
-    name: "Validate Gradle wrapper"
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      - "1.19"
+  workflow_dispatch:
+    inputs:
+      norelease:
+        description: 'Do not publish'
+        required: true
+        default: 'false'
 
-      - uses: gradle/wrapper-validation-action@v1
-  license:
-    name: "Verify License integrity"
+jobs:
+  build:
+    name: "Build and Release"
     runs-on: ubuntu-20.04
+    if: |
+      !contains(github.event.head_commit.message, '[ci skip]')
     steps:
       - uses: actions/checkout@v2
 
@@ -31,24 +30,13 @@ jobs:
           java-version: 17
           distribution: 'temurin'
 
-      - name: Setup Gradle and verify license using Licenser
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Verify license using Licenser
         uses: gradle/gradle-build-action@v2
         with:
           arguments: licenseCheck
-
-  build:
-    name: "Build"
-    runs-on: ubuntu-20.04
-    if: |
-      !contains(github.event.pull_request.title, '[ci skip]')
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: 'temurin'
 
       - name: Setup and Build with Gradle
         uses: gradle/gradle-build-action@v2
@@ -61,7 +49,7 @@ jobs:
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^minecraft_version= >> $GITHUB_ENV
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^base_version= >> $GITHUB_ENV
       - name: Create package name
-        run: echo "package_name=[$minecraft_version] $archives_base_name-$base_version-SNAPSHOT.PR${{ github.event.number }}" >> $GITHUB_ENV
+        run: echo "package_name=[$minecraft_version] $archives_base_name-$base_version.${{ github.run_number }}" >> $GITHUB_ENV
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ env.package_name }}
@@ -72,3 +60,16 @@ jobs:
             !**/*-shadow.jar
             !**/*-transformProduction*.jar
             !**/testmod*/
+
+      - name: Release to Maven and CurseForge
+        uses: gradle/gradle-build-action@v2
+        if: |
+          !contains(github.event.head_commit.message, '[norelease]') && github.event.inputs.norelease != 'true'
+        env:
+          # currently unused, may want to use these for changelogs though!
+          # GIT_COMMIT: ${{ github.event.after }}
+          # GIT_PREVIOUS_COMMIT: ${{ github.event.before }}
+          MAVEN_PASS: ${{ secrets.MAVEN_PASS }}
+          CURSE_API_KEY: ${{ secrets.CURSE_API_KEY }}
+        with:
+          arguments: publish curseforge --stacktrace --no-daemon
