Update CurseForge release info

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ forgeEnabled=false
 minecraft_version=22w11a
 supported_version=22w11a
 
-cf_type=alpha
+cf_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
