Port to 22w13oneblockatatime

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,20 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-forgeEnabled=true
+forgeEnabled=false
 
-minecraft_version=1.18.2
-supported_version=1.18.2
+supported_version=1.19 (22w13oneblockatatime)
+minecraft_version=22w13oneblockatatime
 
-cf_type=release
+cf_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=4.1
+base_version=5.1
 maven_group=dev.architectury
 
 fabric_loader_version=0.13.3
-fabric_api_version=0.47.8+1.18.2
+fabric_api_version=0.48.1+22w13oneblockatatime
 mod_menu_version=3.0.0
 
 forge_version=40.0.1
