--- a/.github/workflows/1.18_push.yml
+++ b/.github/workflows/1.18_push.yml
@@ -8,6 +8,7 @@ on:
       - '**/src/**'
     branches:
       - "1.18.2"
+      - "1.19-oneblockatatime"
   workflow_dispatch:
     inputs:
       norelease:
