--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -55,8 +55,10 @@ shadowJar {
     exclude "dev/architectury/core/fluid/ArchitecturyFlowingFluid.class"
     exclude 'dev/architectury/core/fluid/ArchitecturyFlowingFluid$Source.class'
     exclude 'dev/architectury/core/fluid/ArchitecturyFlowingFluid$Flowing.class'
+    exclude 'dev/architectury/core/item/ArchitecturyBucketItem.class'
     relocate "dev.architectury.core.block.forge.imitator", "dev.architectury.core.block"
     relocate "dev.architectury.core.fluid.forge.imitator", "dev.architectury.core.fluid"
+    relocate "dev.architectury.core.item.forge.imitator", "dev.architectury.core.item"
 }
 
 remapJar {
