--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -56,6 +56,7 @@ shadowJar {
     exclude 'dev/architectury/core/fluid/ArchitecturyFlowingFluid$Source.class'
     exclude 'dev/architectury/core/fluid/ArchitecturyFlowingFluid$Flowing.class'
     exclude 'dev/architectury/core/item/ArchitecturyBucketItem.class'
+    exclude 'dev/architectury/core/item/ArchitecturyMobBucketItem.class'
     relocate "dev.architectury.core.block.forge.imitator", "dev.architectury.core.block"
     relocate "dev.architectury.core.fluid.forge.imitator", "dev.architectury.core.fluid"
     relocate "dev.architectury.core.item.forge.imitator", "dev.architectury.core.item"
