Update to 1.19-pre1

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,7 +9,7 @@ dependencies {
 }
 
 architectury {
-    common(rootProject.forgeEnabled.toBoolean())
+    common(rootProject.platforms.split(","))
 }
 
 /**
