--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-forgeEnabled=false
+platforms=fabric
 
-minecraft_version=22w19a
-supported_version=22w19a
+minecraft_version=1.19-pre1
+supported_version=1.19-pre1
 
 cf_type=beta
 
@@ -14,7 +14,7 @@ base_version=5.4
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.5
-fabric_api_version=0.52.2+1.19
+fabric_api_version=0.52.4+1.19
 mod_menu_version=3.1.0
 
 forge_version=40.1.14
