--- a/testmod-common/build.gradle
+++ b/testmod-common/build.gradle
@@ -6,5 +6,5 @@ dependencies {
 }
 
 architectury {
-    common(rootProject.forgeEnabled.toBoolean())
+    common(rootProject.platforms.split(","))
 }
