--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ forgeEnabled=true
 minecraft_version=1.18
 supported_version=1.18(.1)
 
-cf_type=release
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -18,3 +18,6 @@ fabric_api_version=0.46.2+1.18
 mod_menu_version=3.0.0
 
 forge_version=38.0.17
+
+curseforge_id=419699
+modrinth_id=lhGA9TYQ
