--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ platforms=fabric
 minecraft_version=1.19-pre1
 supported_version=1.19-pre1
 
-cf_type=beta
+artifact_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -18,3 +18,6 @@ fabric_api_version=0.52.4+1.19
 mod_menu_version=3.1.0
 
 forge_version=40.1.14
+
+curseforge_id=419699
+modrinth_id=lhGA9TYQ
