Add rudimentary support for modrinth publishing (#263)
(cherry picked from commit 4da029729cc79305da6f89208e4526384b363b6f)
Signed-off-by: Max <maxh2709@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,12 @@
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-minecraft_version=1.16.5
-supported_version=1.16.4/5
+forgeEnabled=true
+
+minecraft_version=1.18.2
+supported_version=1.18.2
+
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -14,3 +18,6 @@ fabric_api_version=0.42.0+1.16
 mod_menu_version=1.16.11+
 
 forge_version=36.0.42
+
+curseforge_id=419699
+modrinth_id=lhGA9TYQ
