--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,17 @@
+import java.text.SimpleDateFormat
+
+buildscript {
+    configurations.classpath {
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    }
+}
+
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "0.10.0-SNAPSHOT" apply false
+    id "dev.architectury.loom" version "0.12.0-SNAPSHOT" apply false
     id "org.cadixdev.licenser" version "0.6.1"
     id "com.matthewprenger.cursegradle" version "1.4.0" apply false
+    id "com.modrinth.minotaur" version "2.2.0" apply false
     id "maven-publish"
 }
 
@@ -78,7 +87,7 @@ allprojects {
 
     ext {
         releaseChangelog = {
-            def dateFormat = new java.text.SimpleDateFormat("yyyy-MM-dd HH:mm")
+            def dateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm")
             dateFormat.setTimeZone(TimeZone.getTimeZone("UTC"))
             def branch
             if (System.env.BRANCH_NAME) {
@@ -112,5 +121,3 @@ allprojects {
 
 task licenseFormatAll
 subprojects { p -> licenseFormatAll.dependsOn("${p.path}:licenseFormat") }
-
-task curseforgePublish
