--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ minecraft_version=1.17.1
 supported_version=1.17.1
 crane_version=1.17.1+build.1
 
-cf_type=release
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -17,3 +17,6 @@ fabric_api_version=0.45.0+1.17
 mod_menu_version=2.0.0-beta.7
 
 forge_version=37.0.69
+
+curseforge_id=419699
+modrinth_id=lhGA9TYQ
