Fix accessWidenerPath property
Signed-off-by: Max <maxh2709@gmail.com>

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,5 @@
 loom {
-    accessWidener = file("src/main/resources/architectury-common.accessWidener")
+    accessWidenerPath = file("src/main/resources/architectury-common.accessWidener")
 }
 
 dependencies {
