--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 platforms=fabric
 
-minecraft_version=1.19-pre3
-supported_version=1.19-pre3
+minecraft_version=1.19-rc1
+supported_version=1.19-rc1
 
 artifact_type=beta
 
@@ -14,7 +14,7 @@ base_version=5.4
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.6
-fabric_api_version=0.53.4+1.19
+fabric_api_version=0.55.0+1.19
 mod_menu_version=3.1.0
 
 forge_version=40.1.14
