--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,23 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,forge
 
-minecraft_version=1.19-rc1
-supported_version=1.19-rc1
+minecraft_version=1.19
+supported_version=1.19
 
 artifact_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=5.4
+base_version=5.5
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.6
-fabric_api_version=0.55.0+1.19
+fabric_api_version=0.55.1+1.19
 mod_menu_version=3.1.0
 
-forge_version=40.1.14
+forge_version=41.0.1
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
