--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
-    id "com.matthewprenger.cursegradle"
-    id "com.modrinth.minotaur"
+    id "me.shedaniel.unified-publishing"
 }
 
 loom {
@@ -99,51 +98,37 @@ publishing {
     }
 }
 
-curseforge {
-    var CURSE_API_KEY = project.findProperty("CURSE_API_KEY") ?: System.getenv("CURSE_API_KEY")
-    if (CURSE_API_KEY != null) {
-        apiKey = CURSE_API_KEY
-        project {
-            id = rootProject.curseforge_id
-            releaseType = "$rootProject.artifact_type"
-            changelogType = "html"
-            changelog = releaseChangelog()
-            addGameVersion "1.18.2"
-            addGameVersion "1.18-Snapshot"
-            addGameVersion "Java 17"
-            addGameVersion "Fabric"
-            relations {
-                requiredDependency "fabric-api"
-            }
-            mainArtifact(remapJar.archivePath) {
-                displayName = "[Fabric $rootProject.supported_version] v$project.version"
-            }
-            afterEvaluate {
-                uploadTask.dependsOn("build")
+unifiedPublishing {
+    project {
+        displayName = "[Fabric $rootProject.supported_version] v$project.version"
+        releaseType = "$rootProject.artifact_type"
+        changelog = releaseChangelog()
+        gameVersions = ["1.18.2"]
+        gameLoaders = ["fabric", "quilt"]
+        mainPublication remapJar
+        relations {
+            depends {
+                curseforge = "fabric-api"
+                modrinth = "fabric-api"
             }
         }
-    }
-    options {
-        forgeGradleIntegration = false
-        javaVersionAutoDetect = false
-    }
-}
 
-modrinth {
-    var MODRINTH_TOKEN = project.findProperty("MODRINTH_TOKEN") ?: System.getenv("MODRINTH_TOKEN")
-    if (MODRINTH_TOKEN != null) {
-        token = MODRINTH_TOKEN
-        projectId = rootProject.modrinth_id
-        versionType = "$rootProject.artifact_type"
-        versionNumber = "$project.version+$project.name"
-        versionName = "[Fabric $rootProject.supported_version] v$project.version"
-        changelog = releaseChangelog()
-        uploadFile = remapJar
-        gameVersions = ["1.18.2"]
-        loaders = ["fabric", "quilt"]
-        dependencies {
-            // TODO: move to slugs if that functionality becomes available in minotaur
-            required.project("P7dR8mSH") // Fabric API
+        var CURSE_API_KEY = project.findProperty("CURSE_API_KEY") ?: System.getenv("CURSE_API_KEY")
+        if (CURSE_API_KEY != null) {
+            curseforge {
+                token = CURSE_API_KEY
+                id = rootProject.curseforge_id
+                gameVersions.addAll "Java 17", "1.18-Snapshot"
+            }
+        }
+
+        var MODRINTH_TOKEN = project.findProperty("MODRINTH_TOKEN") ?: System.getenv("MODRINTH_TOKEN")
+        if (MODRINTH_TOKEN != null) {
+            modrinth {
+                token = MODRINTH_TOKEN
+                id = rootProject.modrinth_id
+                version = "$project.version+$project.name"
+            }
         }
     }
 }
