--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
-    id "com.matthewprenger.cursegradle"
-    id "com.modrinth.minotaur"
+    id "me.shedaniel.unified-publishing"
 }
 
 loom {
@@ -112,45 +111,31 @@ publishing {
     }
 }
 
-curseforge {
-    var CURSE_API_KEY = project.findProperty("CURSE_API_KEY") ?: System.getenv("CURSE_API_KEY")
-    if (CURSE_API_KEY != null) {
-        apiKey = CURSE_API_KEY
-        project {
-            id = rootProject.curseforge_id
-            releaseType = "$rootProject.artifact_type"
-            changelogType = "html"
-            changelog = releaseChangelog()
-            addGameVersion "1.18.2"
-            addGameVersion "Java 17"
-            addGameVersion "Forge"
-            mainArtifact(remapJar.archivePath) {
-                displayName = "[Forge $rootProject.supported_version] v$project.version"
-            }
-            afterEvaluate {
-                uploadTask.dependsOn("build")
+unifiedPublishing {
+    project {
+        displayName = "[Forge $rootProject.supported_version] v$project.version"
+        releaseType = "$rootProject.artifact_type"
+        changelog = releaseChangelog()
+        gameVersions = ["1.18.2"]
+        gameLoaders = ["forge"]
+        mainPublication remapJar
+
+        var CURSE_API_KEY = project.findProperty("CURSE_API_KEY") ?: System.getenv("CURSE_API_KEY")
+        if (CURSE_API_KEY != null) {
+            curseforge {
+                token = CURSE_API_KEY
+                id = rootProject.curseforge_id
+                gameVersions.addAll "Java 17"
             }
         }
-    }
-    options {
-        forgeGradleIntegration = false
-        javaVersionAutoDetect = false
-    }
-}
 
-modrinth {
-    var MODRINTH_TOKEN = project.findProperty("MODRINTH_TOKEN") ?: System.getenv("MODRINTH_TOKEN")
-    if (MODRINTH_TOKEN != null) {
-        token = MODRINTH_TOKEN
-        projectId = rootProject.modrinth_id
-        versionType = "$rootProject.artifact_type"
-        versionNumber = "$project.version+$project.name"
-        versionName = "[Forge $rootProject.supported_version] v$project.version"
-        changelog = releaseChangelog()
-        uploadFile = remapJar
-        gameVersions = ["1.18.2"]
-        loaders = ["forge"]
-        dependencies {
+        var MODRINTH_TOKEN = project.findProperty("MODRINTH_TOKEN") ?: System.getenv("MODRINTH_TOKEN")
+        if (MODRINTH_TOKEN != null) {
+            modrinth {
+                token = MODRINTH_TOKEN
+                id = rootProject.modrinth_id
+                version = "$project.version+$project.name"
+            }
         }
     }
 }
