--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,7 @@ plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "0.12.0-SNAPSHOT" apply false
     id "org.cadixdev.licenser" version "0.6.1"
-    id "com.matthewprenger.cursegradle" version "1.4.0" apply false
-    id "com.modrinth.minotaur" version "2.2.0" apply false
+    id "me.shedaniel.unified-publishing" version "0.1.+" apply false
     id "maven-publish"
 }
 
@@ -98,12 +97,12 @@ allprojects {
             }
             def time = dateFormat.format(new Date())
             def changes = new StringBuilder()
-            changes << "<h2>Architectury v$project.version for $project.supported_version</h2>Updated at <b>$time</b>.<br><a href=\"https://www.github.com/architectury/architectury/commits/$branch\">Click here for changelog</a>"
+            changes << "## Architectury v$project.version for $project.supported_version\nUpdated at **$time**.\n[Click here for changelog](https://www.github.com/architectury/architectury/commits/$branch)"
             def proc = "git log --max-count=200 --pretty=format:%s".execute()
             proc.in.eachLine { line ->
                 def processedLine = line.toString()
                 if (!processedLine.contains("New translations") && !processedLine.contains("Merge") && !processedLine.contains("branch")) {
-                    changes << "<br>- ${processedLine.capitalize()}"
+                    changes << "\n- ${processedLine.capitalize()}"
                 }
             }
             proc.waitFor()
