--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "0.12.0-SNAPSHOT" apply false
     id "org.cadixdev.licenser" version "0.6.1"
+    id "io.github.juuxel.loom-quiltflower" version "1.7.2" apply false
     id "me.shedaniel.unified-publishing" version "0.1.+" apply false
     id "maven-publish"
 }
@@ -20,6 +21,7 @@ architectury {
 
 subprojects {
     apply plugin: "dev.architectury.loom"
+    apply plugin: "io.github.juuxel.loom-quiltflower"
 
     loom {
         silentMojangMappingsLicense()
