Update Forge mods.toml automatically

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -149,3 +149,14 @@ unifiedPublishing {
         }
     }
 }
+
+// Update mods.toml with the new versions automatically
+// Not using processResources because it is easier to do this manually, and see it reflected immediately
+afterEvaluate {
+    file("src/main/resources/META-INF/mods.toml").withOutputStream {
+        it << file("mods.toml").text
+                .replaceAll("@LOADER_MAJOR@", rootProject.forge_version.split("\\.")[0])
+                .replaceAll("@MINECRAFT_VERSION@", rootProject.architectury.minecraft)
+                .replaceAll("@FORGE_VERSION@", rootProject.forge_version)
+    }
+}
