--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,20 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,forge
+platforms=fabric
 
-minecraft_version=1.19
-supported_version=1.19
+minecraft_version=1.19.1-rc2
+supported_version=1.19.1-rc2
 
-artifact_type=release
+artifact_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=5.10
+base_version=6.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.6
-fabric_api_version=0.55.1+1.19
+fabric_loader_version=0.14.8
+fabric_api_version=0.58.0+1.19.1
 mod_menu_version=3.1.0
 
 forge_version=41.0.94
