--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,forge
 
-minecraft_version=1.19.1-rc2
-supported_version=1.19.1-rc2
+minecraft_version=1.19.1
+supported_version=1.19.1
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -14,10 +14,10 @@ base_version=6.0
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.8
-fabric_api_version=0.58.0+1.19.1
+fabric_api_version=0.58.5+1.19.1
 mod_menu_version=3.1.0
 
-forge_version=41.0.94
+forge_version=42.0.0
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
