--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,9 @@ org.gradle.daemon=false
 
 platforms=fabric,forge
 
-minecraft_version=1.19.1
-supported_version=1.19.1
+minecraft_version=1.19.2
+supported_version=1.19.1/2
+required_version=1.19.1
 
 artifact_type=release
 
@@ -13,11 +14,12 @@ archives_base_name_snapshot=architectury-snapshot
 base_version=6.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.8
-fabric_api_version=0.58.5+1.19.1
+fabric_loader_version=0.14.9
+fabric_api_version=0.58.6+1.19.2
 mod_menu_version=3.1.0
 
-forge_version=42.0.0
+forge_version=43.0.0
+required_forge_version=42.0.0
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
