--- a/forge/mods.toml
+++ b/forge/mods.toml
@@ -17,7 +17,7 @@ license = "LGPL-3"
 [[dependencies.architectury]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[@MINECRAFT_VERSION@,)"
+versionRange = "[@MINECRAFT_VERSION@]"
 ordering = "NONE"
 side = "BOTH"
 
