First look of 22w42a while we wait

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,forge
+platforms=fabric
 
-minecraft_version=1.19.2
-supported_version=1.19.1/2
-required_version=1.19.1
+minecraft_version=22w42a
+supported_version=1.19.3 (22w42a)
+required_version=1.19.3
 
-artifact_type=release
+artifact_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
