--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ base_version=6.2
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.9
-fabric_api_version=0.58.6+1.19.2
+fabric_api_version=0.64.0+local-1.19.3
 mod_menu_version=3.1.0
 
 forge_version=43.0.0
