--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@ archives_base_name_snapshot=architectury-snapshot
 base_version=6.2
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.9
-fabric_api_version=0.64.0+local-1.19.3
+fabric_loader_version=0.14.10
+fabric_api_version=0.64.0+local-mixinfix
 mod_menu_version=3.1.0
 
 forge_version=43.0.0
