--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ base_version=7.0
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.10
-fabric_api_version=0.64.0+local-mixinfix
+fabric_api_version=0.65.0+1.19.3
 mod_menu_version=3.1.0
 
 forge_version=43.0.0
