--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -126,7 +126,7 @@ unifiedPublishing {
         displayName = "[Forge $rootProject.supported_version] v$project.version"
         releaseType = "$rootProject.artifact_type"
         changelog = releaseChangelog()
-        gameVersions = ["1.19.1", "1.19.2"]
+        gameVersions = ["1.19.3"]
         gameLoaders = ["forge"]
         mainPublication renameJarForPublication
 
