Replace loom.forge.localMods with loom.mods

--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -6,14 +6,14 @@ plugins {
 loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
 
+    mods {
+        forge {
+            sourceSet project(":forge").sourceSets.main
+        }
+    }
+
     forge {
         mixinConfig "architectury.mixins.json"
-
-        localMods {
-            forge {
-                it.add(project(":forge").sourceSets.main)
-            }
-        }
     }
 }
 
