--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -126,7 +126,7 @@ unifiedPublishing {
         displayName = "[Forge $rootProject.supported_version] v$project.version"
         releaseType = "$rootProject.artifact_type"
         changelog = releaseChangelog()
-        gameVersions = ["1.19.1", "1.19.2"]
+        gameVersions = ["1.19.2"]
         gameLoaders = ["forge"]
         mainPublication renameJarForPublication
 
@@ -135,7 +135,7 @@ unifiedPublishing {
             curseforge {
                 token = CURSE_API_KEY
                 id = rootProject.curseforge_id
-                gameVersions.addAll "Java 17"
+                gameVersions.addAll "Java 17", "1.19.2"
             }
         }
 
@@ -150,13 +150,3 @@ unifiedPublishing {
     }
 }
 
-// Update mods.toml with the new versions automatically
-// Not using processResources because it is easier to do this manually, and see it reflected immediately
-afterEvaluate {
-    file("src/main/resources/META-INF/mods.toml").withOutputStream {
-        it << file("mods.toml").text
-                .replaceAll("@LOADER_MAJOR@", rootProject.required_forge_version.split("\\.")[0])
-                .replaceAll("@MINECRAFT_VERSION@", rootProject.required_version)
-                .replaceAll("@FORGE_VERSION@", rootProject.required_forge_version)
-    }
-}
