--- a/gradle.properties
+++ b/gradle.properties
@@ -4,22 +4,20 @@ org.gradle.daemon=false
 platforms=fabric,forge
 
 minecraft_version=1.19.2
-supported_version=1.19.1/2
-required_version=1.19.1
+supported_version=1.19.2
 
 artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=6.3
+base_version=6.4
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.9
-fabric_api_version=0.58.6+1.19.2
+fabric_loader_version=0.14.10
+fabric_api_version=0.66.0+1.19.2
 mod_menu_version=3.1.0
 
-forge_version=43.0.0
-required_forge_version=42.0.0
+forge_version=43.2.0
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
