--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,23 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,forge
 
 minecraft_version=1.19.3
 supported_version=1.19.3
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
 base_version=7.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.10
-fabric_api_version=0.67.2+1.19.3
+fabric_loader_version=0.14.11
+fabric_api_version=0.68.1+1.19.3
 mod_menu_version=3.1.0
 
-forge_version=43.2.0
+forge_version=44.0.0
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
