--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -135,7 +135,7 @@ unifiedPublishing {
             curseforge {
                 token = CURSE_API_KEY
                 id = rootProject.curseforge_id
-                gameVersions.addAll "Java 17", "1.19.2"
+                gameVersions.addAll "Java 17"
             }
         }
 
