--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,21 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,forge
+platforms=fabric
 
-minecraft_version=1.19.3
-supported_version=1.19.3
+minecraft_version=23w03a
+supported_version=1.19.4 (23w03a)
 
-artifact_type=release
+artifact_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=7.0
+base_version=8.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.11
-fabric_api_version=0.68.1+1.19.3
-mod_menu_version=3.1.0
+fabric_loader_version=0.14.13
+fabric_api_version=0.72.1+1.19.4
+mod_menu_version=5.0.2
 
 forge_version=44.0.6
 
