--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -45,28 +45,28 @@ shadowJar {
     exclude "architectury.common.json"
 
     configurations = [project.configurations.shadowCommon]
-    classifier "dev-shadow"
+    archiveClassifier = "dev-shadow"
 }
 
 remapJar {
     injectAccessWidener = true
     input.set shadowJar.archiveFile
     dependsOn shadowJar
-    classifier null
+    archiveClassifier = null
 }
 
 task renameJarForPublication(type: Zip, dependsOn: remapJar) {
     from remapJar.archiveFile.map { zipTree(it) }
-    extension "jar"
+    archiveExtension = "jar"
     metadataCharset "UTF-8"
     destinationDirectory = base.libsDirectory
-    classifier project.name
+    archiveClassifier = project.name
 }
 
 assemble.dependsOn renameJarForPublication
 
 jar {
-    classifier "dev"
+    archiveClassifier = "dev"
 }
 
 sourcesJar {
