Update to 1.19.4-pre3

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 platforms=fabric
 
-minecraft_version=23w03a
-supported_version=1.19.4 (23w03a)
+minecraft_version=1.19.4-pre3
+supported_version=1.19.4-pre3
 
 artifact_type=beta
 
@@ -13,8 +13,8 @@ archives_base_name_snapshot=architectury-snapshot
 base_version=8.1
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.13
-fabric_api_version=0.72.1+1.19.4
+fabric_loader_version=0.14.17
+fabric_api_version=0.75.2+1.19.4
 mod_menu_version=5.0.2
 
 forge_version=44.0.6
