--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,20 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,forge
+platforms=fabric
 
-minecraft_version=1.19.4
-supported_version=1.19.4
+minecraft_version=23w13a
+supported_version=23w13a
 
-artifact_type=release
+artifact_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=8.1
+base_version=9.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.17
-fabric_api_version=0.76.0+1.19.4
+fabric_loader_version=0.14.19
+fabric_api_version=0.76.2+1.20
 mod_menu_version=5.0.2
 
 forge_version=45.0.24
