--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,forge
 
-minecraft_version=1.20-pre5
-supported_version=1.20-pre5
+minecraft_version=1.20
+supported_version=1.20
 
 artifact_type=beta
 
@@ -13,11 +13,11 @@ archives_base_name_snapshot=architectury-snapshot
 base_version=9.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.20
-fabric_api_version=0.81.3+1.20
-mod_menu_version=5.0.2
+fabric_loader_version=0.14.21
+fabric_api_version=0.83.0+1.20
+mod_menu_version=7.0.0
 
-forge_version=45.0.24
+forge_version=46.0.1
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
