Fix wrong injection point for container screen foreground

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ platforms=fabric,forge
 minecraft_version=1.20
 supported_version=1.20
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
