--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.daemon=false
 platforms=fabric,forge
 
 minecraft_version=1.20
-supported_version=1.20
+supported_version=1.20(.1)
 
 artifact_type=release
 
