Update to 1.20.2-pre2
Signed-off-by: shedaniel <daniel@shedaniel.me>

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ architectury {
 
 subprojects {
     apply plugin: "dev.architectury.loom"
-    apply plugin: "io.github.juuxel.loom-quiltflower"
+    apply plugin: "io.github.juuxel.loom-vineflower"
 
     loom {
         silentMojangMappingsLicense()
