--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,forge
 
-minecraft_version=1.20.2-pre4
-supported_version=1.20.2-pre4
+minecraft_version=1.20.2
+supported_version=1.20.2
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -14,10 +14,10 @@ base_version=10.0
 maven_group=dev.architectury
 
 fabric_loader_version=0.14.22
-fabric_api_version=0.88.4+1.20.2
+fabric_api_version=0.89.1+1.20.2
 mod_menu_version=7.0.0
 
-forge_version=46.0.1
+forge_version=48.0.1
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
