--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,forge
+platforms=fabric,forge,neoforge
 
 minecraft_version=1.20.2
 supported_version=1.20.2
@@ -18,6 +18,7 @@ fabric_api_version=0.89.1+1.20.2
 mod_menu_version=7.0.0
 
 forge_version=48.0.38
+neoforge_version=20.2.52-beta
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
